	- cupsGetPPD* would return a symlink to the PPD in /etc/cups/ppd even if
	  it was not readable by the user (STR #4500)
	- The web interface now protects against frame "click-jacking" attacks
	  (STR #4492)
	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
	- Fixed a crash in the scheduler on Linux/*BSD if colord was not running
	  (STR #4496)
	- Added systemd support for cups-lpd (STR #4493)
	- The scheduler did not honor the FatalErrors directive for mis-
	  configured Group and SystemGroup values (STR #4495)
	- The network backends no longer report waste-receptacle conditions when
	  using SNMP (STR #4499)
	- The IPP backend did not work with some configurations of Windows
	  (STR #4503)
	- RPMs did not build (STR #4490)
	- Added a USB quirk rule for the Brother HL-1250 (STR #4519)


CHANGES IN CUPS V2.0.0

	- The scheduler did not preserve listener sockets from launchd or
	  systemd after a restart (<rdar://problem/18112848>)
	- Added some USB quirk rules for the libusb-based USB backend
	  (STR #4482)
	- Spanish localization update (STR #4487)
	- Updated documentation for 2.0.0 release.


CHANGES IN CUPS V2.0rc1

	- Documentation updates (STR #4464)
	- The scheduler now monitors the AC power status on OS X, allowing for
	  "sleep printing" when sharing printers (<rdar://problem/17325852>)
	- The scheduler incorrectly called launch_activate_socket multiple times
	  on OS X (<rdar://problem/17523218>)
	- The ippserver test program now passes the IPP Everywhere self-
	  certification tests (STR #4101)
	- Relaxed the new OS X filter sandbox slightly (STR #4471,
	  <rdar://problem/17483959>)
	- Dropped the old Epson Stylus Color/Photo sample drivers since they
	  don't work with any current printers and there are free alternatives
	  that produce much better output (<rdar://problem/18036889>)
	- Log and configuration files that are not world-readable are again
	  accessible via the web interface (STR #4461)