@@ -13,6 +13,8 @@ CHANGES IN CUPS V2.0.1
 	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
 	- Fixed a crash in the scheduler on Linux/*BSD if colord was not running
 	  (STR #4496)
+	- Fixed a random crash in the scheduler when not using systemd
+	  (STR #4484)
 	- Added systemd support for cups-lpd (STR #4493)
 	- The scheduler did not honor the FatalErrors directive for mis-
 	  configured Group and SystemGroup values (STR #4495)
@@ -22,6 +24,8 @@ CHANGES IN CUPS V2.0.1
 	  (STR #4503)
 	- RPMs did not build (STR #4490)
 	- Added a USB quirk rule for the Brother HL-1250 (STR #4519)
+	- Fixed compiles on unsupported platforms (STR #4510)
+	- "cancel -a" did not cancel all jobs on all destinations (STR #4513)
 
 
 CHANGES IN CUPS V2.0.0
